force-app/main/default/objects/Executive_Summary__c/fields/Account_Plan_Company_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Company_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Company Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctPlanCompanyProfile__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Customer_Name__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctPlanCompanyProfile__c</referenceTo>
    <relationshipLabel>Executive Summary</relationshipLabel>
    <relationshipName>Executive_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>