force-app/main/default/objects/Executive_Summary__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action for the Executive Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ข้อมูล Action Plan ที่ได้มาจาก Account Plan Decision Map &amp; Action Plan (Step 5) โดยจะนำActivities Plan ที่จะเกิดขึ้นในอนาคตมาแสดงเท่านั้น</inlineHelpText>
    <label>Action</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>