force-app/main/default/objects/Executive_Summary__c/fields/Actual_NIId_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Actual_NIId_Last_Year__c</fullName>
    <description>Last Year’s Actual Performance NIId – YTD</description>
    <inlineHelpText>Actual NIId จาก Customer&apos;s Single View section performance report ในปีที่ผ่านมา</inlineHelpText>
    <label>Actual - NIId (Last Year)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>