force-app/main/default/objects/Executive_Summary__c/fields/Business_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>