force-app/main/default/objects/Executive_Summary__c/fields/Business_Established_Since__c.field-meta.xml
<CustomField>
    <fullName>Business_Established_Since__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Established Since</label>
    <type>Date</type>
</CustomField>