force-app/main/default/objects/Executive_Summary__c/fields/CloneSource__c.field-meta.xml
<CustomField>
    <fullName>CloneSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clone Source</label>
    <referenceTo>Executive_Summary__c</referenceTo>
    <relationshipLabel>Executive Summary</relationshipLabel>
    <relationshipName>Executive_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>