force-app/main/default/objects/Executive_Summary__c/fields/Company_Industry_Info__c.field-meta.xml
<CustomField>
    <fullName>Company_Industry_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Executive Summary</relationshipLabel>
    <relationshipName>Executive_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>