force-app/main/default/objects/Executive_Summary__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Name in Thai</description>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Executive Summary</relationshipLabel>
    <relationshipName>Executive_Report</relationshipName>
    <type>Lookup</type>
</CustomField>