force-app/main/default/objects/Executive_Summary__c/fields/Customer_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Customer_Strategy__c</fullName>
    <description>Customer Strategy</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ข้อมูลกลยุทธ์ของลูกค้า ในปีที่ผ่านมาหรือแผนในอนาคตที่กำลังจะเกิดขึ้น โดยข้อมูลมาจาก Account Plan Customer Profile (Step 2)</inlineHelpText>
    <label>Strategy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>