force-app/main/default/objects/Executive_Summary__c/fields/Expected_Incremental_NIId__c.field-meta.xml
<CustomField>
    <fullName>Expected_Incremental_NIId__c</fullName>
    <description>This Year’s Expected Incremental - NIId</description>
    <inlineHelpText>Expected Incremental NIId ได้จากการทำ Decision Map and Action Plan ใน Account Plan Step 5</inlineHelpText>
    <label>Expected Incremental  - NIId</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>