force-app/main/default/objects/Executive_Summary__c/fields/Financial_Highlight__c.field-meta.xml
<CustomField>
    <fullName>Financial_Highlight__c</fullName>
    <description>Customer’s Financial highlights (can be text or picture)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ข้อมูลงบการเงินของลูกค้า โดยข้อมูลมาจาก Account Plan Customer Profile (Step 2)</inlineHelpText>
    <label>Financial Highlight</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>