force-app/main/default/objects/Executive_Summary__c/fields/Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Last_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>