force-app/main/default/objects/Executive_Summary__c/fields/Master_Scale__c.field-meta.xml
<CustomField>
    <fullName>Master_Scale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Master Scale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>