force-app/main/default/objects/Executive_Summary__c/fields/Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>