force-app/main/default/objects/Executive_Summary__c/fields/RM_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Executive_Report</relationshipName>
    <type>Lookup</type>
</CustomField>