force-app/main/default/objects/Executive_Summary__c/fields/Run_Rate_Fees_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Run_Rate_Fees_This_Year__c</fullName>
    <description>CSV’s Actual - Fee</description>
    <inlineHelpText>Acctual Fee (Run Rate) แสดงค่าเดียวกันกับหน้า Customer Single View</inlineHelpText>
    <label>Run Rate - Fees (This Year)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>