force-app/main/default/objects/Executive_Summary__c/fields/Shareholding_Structure__c.field-meta.xml
<CustomField>
    <fullName>Shareholding_Structure__c</fullName>
    <description>Custmer&apos;s Shareholding strucutre</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>โครงสร้างผู้ถือหุ้นของลูกค้า โดยข้อมูลมาจาก Account Plan Customer Profile (Step 2)</inlineHelpText>
    <label>Shareholding Structure</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>