force-app/main/default/objects/Executive_Summary__c/fields/Talk_Point__c.field-meta.xml
<CustomField>
    <fullName>Talk_Point__c</fullName>
    <description>Talk Point for the Executive Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Business outcome ที่ต้องการจากการไปประชุมครั้งนี้</inlineHelpText>
    <label>Talk Point</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>