force-app/main/default/objects/Executive_Summary__c/fields/Team_Head__c.field-meta.xml
<CustomField>
    <fullName>Team_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Head</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User is inactive.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Executive_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>