force-app/main/default/objects/Executive_Summary__c/fields/This_Year__c.field-meta.xml
<CustomField>
    <fullName>This_Year__c</fullName>
    <description>Year before Account Plan Year</description>
    <encryptionScheme>None</encryptionScheme>
    <label>This Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>