force-app/main/default/objects/Executive_Summary__c/fields/TMB_Business__c.field-meta.xml
<CustomField>
    <fullName>TMB_Business__c</fullName>
    <description>Narrative of TMB Business with the customer (can be text of picture)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ข้อมูลผลิตภัณฑ์ปัจจุบันที่ลูกค้ามีอยู่ เช่น วงเงิน, หลักทรัพย์ที่ใช้ค้ำประกัน หรือการวางแผนผลิตภัณฑ์อื่น ๆ กับลูกค้า โดยข้อมูลมาจาก Account Plan Customer Profile (Step 2)</inlineHelpText>
    <label>TMB Business</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>