force-app/main/default/objects/Executive_Summary__c/fields/TMB_Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>TMB_Customer_Since__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Customer Since</label>
    <type>Date</type>
</CustomField>