force-app/main/default/objects/Executive_Summary__c/fields/TMB_Guests_3__c.field-meta.xml
<CustomField>
    <fullName>TMB_Guests_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMB Guests 3</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND ((2 AND 3) OR 4)</booleanFilter>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer_Name__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Core_bank</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Core_bank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Executive Summary (TMB Guests 3)</relationshipLabel>
    <relationshipName>Executive_Summary2</relationshipName>
    <type>Lookup</type>
</CustomField>