force-app/main/default/objects/Executive_Summary__c/fields/Total_Actual_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Last_Year__c</fullName>
    <description>Last Year’s Total Actual Performance</description>
    <inlineHelpText>Actual NI จาก Customer&apos;s Single View section performance report ในปีที่ผ่านมา</inlineHelpText>
    <label>Total Actual (Last Year)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>