force-app/main/default/objects/Executive_Summary__c/fields/Total_Expected_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Incremental__c</fullName>
    <description>This Year’s Expected Incremental Wallet – Total</description>
    <inlineHelpText>Expected Incremental NI ได้จากการทำ Decision Map and Action Plan ใน Account Plan Step 5</inlineHelpText>
    <label>Total Expected Incremental</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>