force-app/main/default/objects/Executive_Summary__c/fields/Total_Run_Rate_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Run_Rate_This_Year__c</fullName>
    <description>CSV’s Actual– Total</description>
    <inlineHelpText>Acctual NI (Run Rate) แสดงค่าเดียวกันกับหน้า Customer Single View</inlineHelpText>
    <label>Total Run Rate (This Year)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>