force-app/main/default/objects/Executive_Summary__c/fields/Total_Wallet_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Wallet_Last_Year__c</fullName>
    <label>Total Wallet (Last Year)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>