force-app/main/default/objects/Executive_Summary__c/fields/Total_Wallet_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Wallet_This_Year__c</fullName>
    <description>This Year’s Total Wallet</description>
    <inlineHelpText>Wallet NI แสดงค่าเดียวกันกับหน้า Customer Single View</inlineHelpText>
    <label>Total Wallet (This Year)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>