force-app/main/default/objects/Executive_Summary__c/fields/Wallet_NIId_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Wallet_NIId_Last_Year__c</fullName>
    <label>Wallet - NIId (Last Year)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>