force-app/main/default/objects/Executive_Summary__c/fields/Wallet_NIId_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Wallet_NIId_This_Year__c</fullName>
    <description>This Year’s Wallet NIId</description>
    <inlineHelpText>Wallet NIId แสดงค่าเดียวกันกับหน้า Customer Single View</inlineHelpText>
    <label>Wallet - NIId (This Year)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>