force-app/main/default/objects/Executive_Summary__c/validationRules/Talkpoint_is_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Talkpoint_is_null</fullName>
    <active>true</active>
    <errorConditionFormula>Talk_Point__c == null</errorConditionFormula>
    <errorDisplayField>Talk_Point__c</errorDisplayField>
    <errorMessage>Talk Point&apos; is mandatory information when creating an Executive Summary. (โปรดระบุข้อมูลในช่อง Talk Point เนื่องจากเป็นข้อมูลสำคัญในการสร้าง Executive Summary)</errorMessage>
</ValidationRule>