force-app/main/default/objects/Executive_Summary__c/validationRules/TMB_Guests_3_is_null.validationRule-meta.xml
<ValidationRule>
    <fullName>TMB_Guests_3_is_null</fullName>
    <active>true</active>
    <description>TMB Guests 1 is null and others have value</description>
    <errorConditionFormula>(TMB_Guests__c!=null &amp;&amp; TMB_Guests_2__c!=null &amp;&amp;TMB_Guests_4__c!=null &amp;&amp;TMB_Guests_3__c == null)</errorConditionFormula>
    <errorDisplayField>TMB_Guests_3__c</errorDisplayField>
    <errorMessage>TMB Guest 4 cannot be entered if TMB Guest 3 is left blank. (โปรดระบุข้อมูลในช่อง TMB Guests 3)</errorMessage>
</ValidationRule>